# trigger_study_E72

./: .gitignore  CMakeLists.txt  README.md  a.py  build.sh  clean.sh
.build/: CMakeCache.txt  Makefile  cmake_install.cmake
include/: DiffCrossSection.hh  ana_helper.h  config.h  fit_functions.h  pad_helper.h  paths_example.h  progress_bar.h
param/beam/: run_config_2.5d.txt  run_config_3.0d.txt  run_config_3.5d.txt  run_config_4.0d.txt  run_config_4.5d.txt  run_config_8.0d.txt
scripts/: acceptance_angular_dist.py  acceptance_data.py  beam_intensity2024_plot.py  cal_NPE.py  check_runtime_for_sim.py  create_angular_acceptance.sh  explain_cos_theta_vs_momentum_plot.py  htof_edep_vs_hitpat.py  htof_edep_vs_hitpat_only_proton.py  htof_hit_position.py  optimize_runplan.py  plot_CB_and_E72_dcs_comparison.py  plot_E72_expected_A0.py  plot_angle.py  plot_bac_pos_optimize.py  plot_beam_and_proton_track.py  plot_beam_distribution.py  plot_coeff_spline.py  plot_cvc_profile.py  plot_dcs.py  plot_dcs_example.py  plot_kvc_profile.py  plot_kvc_stdev.py  plot_kvc_x_profile.py  plot_mom_vs_sqrt_s.py  plot_spline_comparison.py  plot_thickness.py  plot_yield_distribution.py  profile_check.py  trig_rate_kvc_pos_dependence.py
src/: acceptance_check.cpp  beam_distribution.cpp  beam_distribution2.cpp  beam_hitpos_at_tgt.cpp  beam_thickness.cpp  beam_trig_rate.cpp  calc_diff_cross_section.cpp  calc_diff_cross_section_for_cusp.cpp  check_kvc_profile.cpp  check_kvc_profile_for_mom.cpp  create_acceptance_root_file.cpp  create_spline_root_file.cpp  create_spline_root_file_for_cusp.cpp  debug_htof.cpp  eta_lambda.cpp  explain_cos_theta_vs_momentum.cpp  htof_energy_deposit.cpp  htof_hit_position.cpp  kvc_angle.cpp  kvc_pos_optimize.cpp  profile_check.cpp  test.cpp  track_check.cpp  yield_estimation.cpp  yield_estimation_for_cusp.cpp
src/shared/: ana_helper.cpp  progress_bar.cpp
